--- a/assets/stylesheets/_base.sass
+++ b/assets/stylesheets/_base.sass
@@ -70,6 +70,10 @@ body
       font-weight: 300
       overflow: hidden
 
+      a
+        color: #fff
+        text-decoration: none
+
     h2
       font-size: 28px
     p
