Change locaweb logo

--- a/assets/stylesheets/_header.sass
+++ b/assets/stylesheets/_header.sass
@@ -12,8 +12,8 @@
     a
       width: 134px
       height: 31px
-      background: url('../images/logo-locaweb.png') no-repeat
-      background-size: contain
+      background: url('../images/logo-locaweb.png') no-repeat center
+      background-size: cover
       text-indent: -999999px
       overflow: hidden
       display: inherit
@@ -74,7 +74,7 @@
   .os-menu-sandwich,
   input[type="checkbox"]
     display: none
-  
+
   li
     list-style: none
     display: inline-block
@@ -192,5 +192,3 @@
         border-bottom: 1px solid rgba(0, 0, 0, .2)
         color: #000
         display: block
-
-
